--- a/04-dev/.eslintrc
+++ b/04-dev/.eslintrc
@@ -1,20 +1,29 @@
 {
   "ecmaFeatures": {
-	  "binaryLiterals": false,                    // enable binary literals
-	  "blockBindings": true,                      // enable let and const (aka block bindings)
-	  "defaultParams": true,                      // enable default function parameters
-	  "forOf": true,                              // enable for-of loops
-	  "generators": true,                         // enable generators
-	  "objectLiteralComputedProperties": false,   // enable computed object literal property names
-	  "objectLiteralDuplicateProperties": false,  // enable duplicate object literal properties in strict mode
-	  "objectLiteralShorthandMethods": false,     // enable object literal shorthand methods
-	  "objectLiteralShorthandProperties": false,  // enable object literal shorthand properties
-	  "octalLiterals": false,                     // enable octal literals
-	  "regexUFlag": false,                        // enable the regular expression u flag
-	  "regexYFlag": false,                        // enable the regular expression y flag
-	  "templateStrings": true,                    // enable template strings
-	  "unicodeCodePointEscapes": false,           // enable code point escapes
-	  "jsx": false                                // enable JSX
+	  "arrowFunctions": true,
+	  "binaryLiterals": false,                    	// enable binary literals
+	  "blockBindings": true,						// enable let and const (aka block bindings)
+	  "classes": true,								// enable classes
+	  "defaultParams": true,                     	// enable default function parameters
+	  "destructuring": true,						// enable destructuring
+	  "forOf": true,                             	// enable for-of loops
+	  "generators": true,                        	// enable generators
+	  "modules": true,								// enable modules and global strict mode
+	  "objectLiteralComputedProperties": false,   	// enable computed object literal property names
+	  "objectLiteralDuplicateProperties": false,  	// enable duplicate object literal properties in strict mode
+	  "objectLiteralShorthandMethods": false,     	// enable object literal shorthand methods
+	  "objectLiteralShorthandProperties": false,  	// enable object literal shorthand properties
+	  "octalLiterals": false,                     	// enable octal literals
+	  "regexUFlag": false,                        	// enable the regular expression u flag
+	  "regexYFlag": false,                        	// enable the regular expression y flag
+	  "restParams": true,							// enable rest parameters
+	  "spread": true,								// enable spread operator for arrays
+	  "superInFunctions": false,					// enable super references inside of functions
+	  "templateStrings": true,                   	// enable template strings
+	  "unicodeCodePointEscapes": false,           	// enable code point escapes
+	  "globalReturn": false,						// enable return statements in global scope
+	  "jsx": false,	                            	// enable JSX
+	  "experimentalObjectRestSpread": false			// enable support for experimental object rest/spread properties
   },
   "rules": {
     "quotes": [
