--- a/07-tdd/package.json
+++ b/07-tdd/package.json
@@ -9,6 +9,9 @@
   "author": "Michael Andorfer <mandorfer.mmt-b2014@fh-salzburg.ac.at>",
   "license": "MIT",
   "devDependencies": {
-    "mocha": "^2.3.4"
+    "a": "^1.0.2",
+    "mocha": "^2.3.4",
+    "node-fixtures": "0.0.1",
+    "should": "^7.1.1"
   }
 }
