--- a/06-diagrams/package.json
+++ b/06-diagrams/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^3.3.5",
     "browserify-shim": "^3.8.11",
     "d3": "^3.5.8",
+    "google-maps-api": "^2.0.0",
     "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
     "grunt-cli": "^0.1.13",
@@ -29,6 +30,7 @@
     "handlebars-helper-repeat": "^0.3.1",
     "hbsfy": "^2.4.1",
     "isomorphic-fetch": "^2.2.0",
+    "jquery": "^2.2.0",
     "less-plugin-autoprefix": "^1.5.1",
     "less-plugin-clean-css": "^1.5.1",
     "load-grunt-tasks": "^3.3.0",
